# ora

ww1/: CMakeLists.txt  README.md  vertex_coloring.cpp  vertex_coloring.csv
ww2/: CMakeLists.txt  max_clique_greedy.cpp  max_clique_greedy.csv
ww3/: CMakeLists.txt  max_clique_tabu_search.cpp  max_clique_tabu_search.csv
ww4/: CMakeLists.txt  bnb.cpp
